
[package]
name = "los_asio"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.11.0", features = ["full"] }
pretty_env_logger = "0.5.0"
http = "1.1.0"
futures = "0.3"
http-body-util = { version = "0.1" } # optional = true
futures-util = "0.3.17"
timer = "0.2.0"
chrono = "0.4.0"
tokio-postgres = "0.7.6"
tokio-util = { version = "0.7.11", features = ["codec"] }
serde_json = "1.0.81"
json = "0.12.4"
bytes = "1.6.0"
pin-project-lite = "0.2.14"
