
[package]
name = "los_asio"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.39.3", features = ["full"] }
pretty_env_logger = "0.5.0"
http = "1.1.0"
futures = "0.3.30"
http-body-util = { version = "0.1.2" } # optional = true
futures-util = "0.3.30"
timer = "0.2.0"
chrono = "0.4.38"
tokio-postgres = "0.7.11"
tokio-util = { version = "0.7.11", features = ["codec"] }
serde_json = "1.0.125"
json = "0.12.4"
bytes = "1.7.1"
pin-project-lite = "0.2.14"
